prevent table growning too much, closes #6442

--- a/assets/stylesheets/haltr.css
+++ b/assets/stylesheets/haltr.css
@@ -507,3 +507,8 @@ ul.pages li span:hover.disabled {
 div.wrapper-pagination-results label {
   padding-top: 5px;
 }
+td.long-td {
+  max-width: 150px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
